--- a/Fishing game.csproj
+++ b/Fishing game.csproj
@@ -10,6 +10,8 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <AssemblyName>FIshingGame</AssemblyName>
+    <RootNamespace>FishingGame</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
